--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "oauth-token-handler",
+  "name": "mts",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.6.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "dotenv": "^16.0.3"
   }
 }
